--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 html, body {
   margin: 0;
-  padding: 0;
-}
+  overflow: hidden;
+} 
 
-canvas {
-  display: block;
-}
+body { 
+  position: relative;}
